--- a/src/sass/price.scss
+++ b/src/sass/price.scss
@@ -1,11 +1,14 @@
+.cont-block-price{
+    margin-top: 25px;
+}
 .general-page {
     font-size: 11px;
     line-height: 14px;
-
+margin-bottom: 49px;
     text-transform: uppercase;
-
+a{
     color: #535353;
-
+}
     span {
         color: #B3B3B3;
         margin-left: 2px;
