--- a/src/sass/main-page.scss
+++ b/src/sass/main-page.scss
@@ -4,10 +4,45 @@
     padding: 32px 10px 0px 0px;
 
 }
+.carousel-control-prev span svg:hover{
+    opacity: 1;
+}
 dl, ol, ul{
     margin-bottom: 0px;
 }
-
+.carousel-indicators{
+    bottom: 30px;
+li{
+    cursor: pointer;
+}
+}
+.arrow-lang{
+    transition: 0.2s;
+}
+.ukr-lang{
+     cursor: pointer;
+    margin: 0 auto;
+    margin-top: 17px;
+    padding-top: 13px;
+    width: 92px;
+    height: 43px;
+ display: none;
+    border-top: 1px solid #E9E9E9;
+    background: #FFFFFF;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+    transition: 0.3s ease;
+    &:hover{
+        color: #11B9ED;
+    }
+}
+.rus-lang{
+    cursor: pointer;
+    transition: 0.3s ease;
+    &:hover{
+        color: #11B9ED;
+    }
+}
+ 
 .burger {
     display: none;
 }
@@ -32,10 +67,17 @@ dl, ol, ul{
     top: 0px;
     width: 100%;
     height: 100%;
-    padding-top: 20px;
-    background:  rgba(255, 255, 255, 0.9) ;
+    padding-top: 40px;
+    background:  #f0f7fb;
 }
  
+@media (max-height: 557px) {
+    .overlay-content {
+      
+        height: 556px;
+     
+    }
+}
 
 .overlay a {
     font-weight: 800;
@@ -44,15 +86,23 @@ dl, ol, ul{
     text-align: center;
     display: block;
     cursor: pointer;
-    margin-left: 30px;
-    margin-bottom: 40px;
-    text-align: left;
+    margin: 0 auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
     transition: 0.3s;
 }
- 
+ #burger-elem a{
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 17px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #202020;
+ }
 #closeNavB {
-    float: right;
-    padding: 20px;
+    position: absolute;
+  right: 30px;
+  top: 30px;
 }
 
 
@@ -84,14 +134,9 @@ svg{
     text-align: center;
      
 }
- 
-
- 
-
-
-
 header{
     width: 99.9%;
+    height: 208px;
  position: relative;
  z-index: 2;
  box-shadow: 0px 12px 40px rgba(0, 0, 0, 0.04), 0px 0px 10px -2px rgba(0, 0, 0, 0.02), 0px 4px 10px rgba(0, 0, 0, 0.02);}
@@ -100,10 +145,6 @@ header{
     border-bottom: 6px solid #E9E9E9;
     
 }
-
-
-
-
 .head_contact {
     margin-left: 20px;
 }
@@ -116,11 +157,12 @@ header{
     font-weight: normal;
     font-size: 13px;
     line-height: 18px;
-    text-decoration-line: underline;
     cursor: pointer;
-
+&:hover{
+    text-decoration-line: underline;
 }
-
+}
+ 
 .head_address p {
     font-style: normal;
     width: 240px;
@@ -171,7 +213,17 @@ header{
     color: white;
     background-color: #11B9ED;
 }
-
+ 
+.block_network svg{
+    transition: 0.3s ease;
+    &:hover{
+        transform: scale(1.1); 
+        cursor: pointer;
+    }
+}
+.block_network  a{
+    text-decoration-line: none;
+}
 // .block_network {
 //     width: 100px !important;
 // }
@@ -206,8 +258,20 @@ header{
 .menu-items li a {
     text-decoration-line: none;
     color: #202020;
+    transition: 0.3s ease;
+    &:hover{
+        color: #11B9ED;
+    }
 } 
- 
+  #menu-elem .pr-href{
+    color: #202020;
+    transition: 0.3s ease;
+    cursor: pointer;
+    &:hover{
+        color: #11B9ED;
+    } 
+ }
+
 .menu-items li {
  text-align: center;
     width: 15%;
@@ -288,7 +352,9 @@ header{
   }
 }
 
-
+.logotip-svg{
+    cursor: pointer;
+}
 .textbox {
     width: 620px;
 }
@@ -414,6 +480,9 @@ header{
     }
 }
 @media (max-width: 1330px){
+    header{
+        height: 192px;
+    }
     .menu-items{
         border-top: 6px solid #E9E9E9;
         margin: 0 auto;
@@ -454,6 +523,9 @@ header{
     }
 }
 @media (max-width: 1199px) {
+    header{
+        height: 245px;
+    }
 .svg_network{
 margin-right: 10px;
 }
@@ -523,7 +595,28 @@ margin-right: 10px;
      margin-left: 10px;
       }
 }
+@media (max-width: 828px){
+    header{
+        height: auto;
+    }
+    .ukr-lang{
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 7px;
+        padding-top: 3px;
+        width: 92px;
+        height: 23px;
+    
+        border-top: none;
+        background: #FFFFFF;
+        box-shadow: none;
+    }
+}
 @media (max-width: 810px){
+ 
+    header{
+        height: 260px;
+    }
     .svg_network{
         margin-right:5px;
         }
@@ -538,7 +631,15 @@ margin-right: 10px;
         padding-left: 0px;
     }
 }
+@media (max-width: 771px){
+    header{
+        height: 289px;
+    }
+}
 @media (max-width: 766px){
+    header{
+        height: auto;
+    }
     header{
   
      box-shadow:none;
@@ -561,6 +662,13 @@ margin-right: 10px;
     }
 }
 @media (max-width: 575px){
+    .header{
+        padding-top: 10px;
+    }
+    .logotip-svg {
+        width: 297px;
+   margin-left: 36px;
+    }
     .block_network{
         display: flex;
         margin-bottom: 10px;
@@ -590,7 +698,10 @@ margin-left: -10px;
     }
 }
 @media (max-width: 475px) {
-    
+    .logotip-svg {
+        width: 265px;
+   margin-left:30px;
+    }
     .carousel-control-next {
         right: 2px;
     }
@@ -633,7 +744,15 @@ margin-left: -10px;
 
     }
 }
+@media (max-width: 397px){
+    .logotip-svg {
+        width: 265px;
+ 
+  margin-left: 18px;
+    }
+}
 @media (max-width: 375px){
+  
 .head_address p{
         
     width: 100%;
