--- a/src/sass/why-we.scss
+++ b/src/sass/why-we.scss
@@ -162,16 +162,25 @@ text-align: center;
 color: #11B9ED;
 width: 203px;
 height: 50px;
-padding-top: 10px;
+padding-top: 10.5px;
 border: 2px solid #11B9ED;
 border-radius: 30px;
 background: transparent;
 cursor: pointer;
 transition: 0.3s ease;
+a{
+    color: #11B9ED;
+    transition: 0.3s ease;
+}
 &:hover {
-    color: white;
+    
     background-color: #11B9ED;
 }
+ 
+}
+.call-btn-team:hover a{
+    color: white;
+    text-decoration: none;
 }
 .grafic{
     margin-top: 130px;
@@ -465,7 +474,7 @@ margin-top: 50px;
     .grafic{
       padding-top: 30px;
       padding-bottom: 30px;
-    padding-left: 15px;
+    padding-left: 25px;
    
     }
     .box-grafic-svg svg{
