--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -4,6 +4,8 @@
 @import "../js/slick/slick.css";
 @import "why-we.scss";
 @import "price.scss";
+@import "services.scss";
+
  * {
      margin: 0;
      padding: 0;
