--- a/src/sass/price.scss
+++ b/src/sass/price.scss
@@ -2,6 +2,7 @@
     margin-top: 25px;
 }
 .general-page {
+  
     font-size: 11px;
     line-height: 14px;
 margin-bottom: 49px;
@@ -206,11 +207,14 @@ a{
         font-size: 12px;
      }
     .box-adapt-pr{
-        width: 700px;
+        // width: 700px;
         padding-right: 30px;
        
     }
-.cont-block-price{
+    .table-adapt{
+        width: 700px;
+    }
+.table-scroll{
     overflow-x: scroll;
 }
 }
