--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -325,11 +325,103 @@
   padding: 32px 10px 0px 0px;
 }
 
+.modal-footer {
+  border-top: none;
+}
+
+.modal-content {
+  min-width: 640px;
+  height: 480px;
+  background: #FFFFFF;
+  border-radius: 4px;
+  margin: 0 auto;
+  margin-left: -72px;
+}
+
+.modal-header {
+  border-bottom: none;
+}
+.modal-header h5 {
+  width: 520px;
+  padding-top: 41px;
+  border-bottom: 1px solid #11B9ED;
+  font-family: Roboto;
+  margin-left: 40px;
+  padding-bottom: 40px;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  color: #11B9ED;
+}
+
+.modal-body {
+  margin: 0 auto;
+  padding-top: 20px;
+  text-align: center;
+}
+.modal-body button {
+  width: 240px;
+  height: 56px;
+  background: linear-gradient(138.32deg, #11B9ED 1.71%, #0073E6 98.67%);
+  box-shadow: 0px 10px 24px rgba(3, 116, 150, 0.1), 0px 1.75302px 15px rgba(3, 116, 150, 0.0712618);
+  border-radius: 100px;
+  font-family: Roboto;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+  border: none;
+  text-align: center;
+  margin-top: 41px;
+  color: #FFFFFF;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.modal-body button:hover {
+  background-position: 240px;
+}
+.modal-body input {
+  width: 426px;
+  height: 56px;
+  border: none;
+  margin-top: 20px;
+  background: #F0F7FB;
+  padding: 10px 16px;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 19px;
+  color: #025772;
+  font-weight: normal;
+}
+.modal-body input::-moz-placeholder {
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 19px;
+  color: #025772;
+  font-weight: normal;
+}
+.modal-body input:-ms-input-placeholder {
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 19px;
+  color: #025772;
+  font-weight: normal;
+}
+.modal-body input::placeholder {
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 19px;
+  color: #025772;
+  font-weight: normal;
+}
+
 .carousel-control-prev span svg:hover {
   opacity: 1;
 }
 
-dl, ol, ul {
+dl,
+ol,
+ul {
   margin-bottom: 0px;
 }
 
@@ -735,7 +827,6 @@ header {
 
 .services-elem:hover .svg-icon {
   fill: white;
-  stroke: white;
 }
 
 .services-elem:hover .eclipse-svg {
@@ -942,6 +1033,32 @@ header {
   }
 }
 @media (max-width: 810px) {
+  .modal-content {
+    min-width: 300px;
+    height: 400px;
+    margin: 0 auto;
+    margin-left: 0px;
+  }
+
+  .modal-header {
+    border-bottom: none;
+  }
+  .modal-header h5 {
+    width: 300px;
+    padding-top: 31px;
+    margin-left: 77px;
+    padding-bottom: 26px;
+    font-size: 30px;
+    line-height: 32px;
+  }
+
+  .modal-body {
+    padding-top: 0px;
+  }
+  .modal-body button {
+    margin-top: 29px;
+  }
+
   header {
     height: 260px;
   }
@@ -996,6 +1113,37 @@ header {
   }
 }
 @media (max-width: 575px) {
+  .modal-content {
+    min-width: 280px;
+    max-width: 553px;
+    height: 400px;
+    margin: 0 auto;
+    margin-left: 0px;
+  }
+
+  .modal-header {
+    border-bottom: none;
+  }
+  .modal-header h5 {
+    text-align: left;
+    width: 250px;
+    padding-top: 31px;
+    margin-left: 20px;
+    padding-bottom: 26px;
+    font-size: 30px;
+    line-height: 32px;
+  }
+
+  .modal-body {
+    padding-top: 0px;
+  }
+  .modal-body input {
+    max-width: 300px;
+  }
+  .modal-body button {
+    margin-top: 29px;
+  }
+
   .header {
     padding-top: 10px;
   }
@@ -1092,6 +1240,17 @@ header {
   }
 }
 @media (max-width: 375px) {
+  .modal-body {
+    padding-top: 0px;
+  }
+  .modal-body input {
+    max-width: 250px;
+    height: 50px;
+  }
+  .modal-body button {
+    margin-top: 29px;
+  }
+
   .head_address p {
     width: 100%;
   }
@@ -1269,24 +1428,15 @@ header {
   color: #11B9ED;
   width: 203px;
   height: 50px;
-  padding-top: 10.5px;
   border: 2px solid #11B9ED;
   border-radius: 30px;
   background: transparent;
   cursor: pointer;
   transition: 0.3s ease;
 }
-.call-btn-team a {
-  color: #11B9ED;
-  transition: 0.3s ease;
-}
 .call-btn-team:hover {
-  background-color: #11B9ED;
-}
-
-.call-btn-team:hover a {
   color: white;
-  text-decoration: none;
+  background-color: #11B9ED;
 }
 
 .grafic {
