--- a/src/sass/main-page.scss
+++ b/src/sass/main-page.scss
@@ -4,45 +4,139 @@
     padding: 32px 10px 0px 0px;
 
 }
-.carousel-control-prev span svg:hover{
+
+.modal-footer {
+    border-top: none;
+}
+
+.modal-content {
+    min-width: 640px;
+    height: 480px;
+    background: #FFFFFF;
+    border-radius: 4px;
+    margin: 0 auto;
+    margin-left: -72px;
+}
+
+.modal-header {
+    border-bottom: none;
+
+    h5 {
+        width: 520px;
+        padding-top: 41px;
+        border-bottom: 1px solid #11B9ED;
+        font-family: Roboto;
+        margin-left: 40px;
+        padding-bottom: 40px;
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 42px;
+        text-align: center;
+        color: #11B9ED;
+    }
+}
+
+.modal-body {
+    margin: 0 auto;
+    padding-top: 20px;
+    text-align: center;
+
+    button {
+        width: 240px;
+        height: 56px;
+        background: linear-gradient(138.32deg, #11B9ED 1.71%, #0073E6 98.67%);
+        box-shadow: 0px 10px 24px rgba(3, 116, 150, 0.1), 0px 1.75302px 15px rgba(3, 116, 150, 0.0712618);
+        border-radius: 100px;
+        font-family: Roboto;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 24px;
+        border: none;
+        text-align: center;
+        margin-top: 41px;
+        color: #FFFFFF;
+        cursor: pointer;
+        transition: 0.5s;
+
+        &:hover {
+            background-position: 240px;
+    
+        }
+    }
+
+    input {
+        width: 426px;
+        height: 56px;
+        border: none;
+        margin-top: 20px;
+        background: #F0F7FB;
+        padding: 10px 16px;
+        font-family: Roboto;
+        font-size: 16px;
+        line-height: 19px;
+        color: #025772;
+        font-weight: normal;
+
+        &::placeholder {
+            font-family: Roboto;
+            font-size: 16px;
+            line-height: 19px;
+            color: #025772;
+            font-weight: normal;
+        }
+    }
+
+}
+
+.carousel-control-prev span svg:hover {
     opacity: 1;
 }
-dl, ol, ul{
+
+dl,
+ol,
+ul {
     margin-bottom: 0px;
 }
-.carousel-indicators{
+
+.carousel-indicators {
     bottom: 30px;
-li{
-    cursor: pointer;
+
+    li {
+        cursor: pointer;
+    }
 }
-}
-.arrow-lang{
+
+.arrow-lang {
     transition: 0.2s;
 }
-.ukr-lang{
-     cursor: pointer;
+
+.ukr-lang {
+    cursor: pointer;
     margin: 0 auto;
     margin-top: 17px;
     padding-top: 13px;
     width: 92px;
     height: 43px;
- display: none;
+    display: none;
     border-top: 1px solid #E9E9E9;
     background: #FFFFFF;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
     transition: 0.3s ease;
-    &:hover{
+
+    &:hover {
         color: #11B9ED;
     }
 }
-.rus-lang{
+
+.rus-lang {
     cursor: pointer;
     transition: 0.3s ease;
-    &:hover{
+
+    &:hover {
         color: #11B9ED;
     }
 }
- 
+
 .burger {
     display: none;
 }
@@ -68,14 +162,14 @@ li{
     width: 100%;
     height: 100%;
     padding-top: 40px;
-    background:  #f0f7fb;
+    background: #f0f7fb;
 }
- 
+
 @media (max-height: 557px) {
     .overlay-content {
-      
+
         height: 556px;
-     
+
     }
 }
 
@@ -91,18 +185,20 @@ li{
     padding-bottom: 30px;
     transition: 0.3s;
 }
- #burger-elem a{
+
+#burger-elem a {
     font-weight: 600;
     font-size: 15px;
     line-height: 17px;
     text-transform: uppercase;
     text-decoration: none;
     color: #202020;
- }
+}
+
 #closeNavB {
     position: absolute;
-  right: 30px;
-  top: 30px;
+    right: 30px;
+    top: 30px;
 }
 
 
@@ -110,41 +206,46 @@ li{
     display: none;
 }
 
-.open-menu{
+.open-menu {
     border: none;
-   max-width: 414px;
- width: 90%;
-height: 50px;
-background: #11B9ED;
-font-weight: 500;
-font-size: 16px;
-line-height: 24px;
-text-align: center;
-text-transform: uppercase;
-color: #FFFFFF;
- 
-svg{
-    position: absolute;
-    margin-left: 7px;
-    margin-top: 1px;
-}
- 
-}
-.burger{
+    max-width: 414px;
+    width: 90%;
+    height: 50px;
+    background: #11B9ED;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
     text-align: center;
-     
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+    svg {
+        position: absolute;
+        margin-left: 7px;
+        margin-top: 1px;
+    }
+
 }
-header{
+
+.burger {
+    text-align: center;
+
+}
+
+header {
     width: 99.9%;
     height: 208px;
- position: relative;
- z-index: 2;
- box-shadow: 0px 12px 40px rgba(0, 0, 0, 0.04), 0px 0px 10px -2px rgba(0, 0, 0, 0.02), 0px 4px 10px rgba(0, 0, 0, 0.02);}
+    position: relative;
+    z-index: 2;
+    box-shadow: 0px 12px 40px rgba(0, 0, 0, 0.04), 0px 0px 10px -2px rgba(0, 0, 0, 0.02), 0px 4px 10px rgba(0, 0, 0, 0.02);
+}
+
 .header-top {
     padding-bottom: 36px;
     border-bottom: 6px solid #E9E9E9;
-    
+
 }
+
 .head_contact {
     margin-left: 20px;
 }
@@ -158,11 +259,12 @@ header{
     font-size: 13px;
     line-height: 18px;
     cursor: pointer;
-&:hover{
-    text-decoration-line: underline;
+
+    &:hover {
+        text-decoration-line: underline;
+    }
 }
-}
- 
+
 .head_address p {
     font-style: normal;
     width: 240px;
@@ -213,17 +315,20 @@ header{
     color: white;
     background-color: #11B9ED;
 }
- 
-.block_network svg{
+
+.block_network svg {
     transition: 0.3s ease;
-    &:hover{
-        transform: scale(1.1); 
+
+    &:hover {
+        transform: scale(1.1);
         cursor: pointer;
     }
 }
-.block_network  a{
+
+.block_network a {
     text-decoration-line: none;
 }
+
 // .block_network {
 //     width: 100px !important;
 // }
@@ -248,8 +353,8 @@ header{
 
 .menu-items {
     list-style-type: none;
-   width: 1574px ;
-   margin-left: -100px;
+    width: 1574px;
+    margin-left: -100px;
     padding: 18px 0px 17px;
     display: flex;
     justify-content: space-between;
@@ -259,27 +364,31 @@ header{
     text-decoration-line: none;
     color: #202020;
     transition: 0.3s ease;
-    &:hover{
+
+    &:hover {
         color: #11B9ED;
     }
-} 
-  #menu-elem .pr-href{
+}
+
+#menu-elem .pr-href {
     color: #202020;
     transition: 0.3s ease;
     cursor: pointer;
-    &:hover{
+
+    &:hover {
         color: #11B9ED;
-    } 
- }
+    }
+}
 
 .menu-items li {
- text-align: center;
+    text-align: center;
     width: 15%;
     font-weight: 500;
     font-size: 15px;
     line-height: 17px;
     text-transform: uppercase;
 }
+
 .menu-items .language svg {
     position: absolute;
     margin-top: -4px;
@@ -345,16 +454,18 @@ header{
     border: none;
     cursor: pointer;
     margin-top: 48px;
-    transition:  0.5s ;
+    transition: 0.5s;
+
     &:hover {
-        background-position:240px; 
- 
-  }
+        background-position: 240px;
+
+    }
 }
 
-.logotip-svg{
+.logotip-svg {
     cursor: pointer;
 }
+
 .textbox {
     width: 620px;
 }
@@ -363,10 +474,12 @@ header{
     background: #F0F7FB;
     padding-top: 90px;
 }
-.add-elem{
+
+.add-elem {
     margin-right: 65px;
     margin-bottom: 38px;
 }
+
 .services-elem {
     transition: 0.3s ease;
     width: 390px;
@@ -374,6 +487,7 @@ header{
     background: #FFFFFF;
     border-radius: 10px;
     padding: 30px;
+
     h4 {
         font-family: Roboto;
         margin-top: 20px;
@@ -413,7 +527,7 @@ header{
 
 .services-elem:hover .svg-icon {
     fill: white;
-    stroke: white;
+    
 }
 
 .services-elem:hover .eclipse-svg {
@@ -436,122 +550,150 @@ header{
     width: 70%;
     margin: 0 auto;
 }
-.block-our_services{
+
+.block-our_services {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 
 }
+
 @media (max-width: 1859px) {
-    .text-services{
+    .text-services {
         width: 70%;
     }
+
     .container-block {
         width: 1300px;
     }
-} 
-@media (max-width: 1549px){
-    .menu-items{
+}
+
+@media (max-width: 1549px) {
+    .menu-items {
         width: 100%;
         margin: 0 auto;
     }
+
     .header {
-      
+
         width: 97%;
         padding: 32px 0px 0px 0px;
-    
+
     }
-    .head-hr{
-        display:none;
+
+    .head-hr {
+        display: none;
     }
 }
+
 @media (max-width: 1430px) {
-  
+
     header {
         width: 100%;
     }
-    .add-elem{
+
+    .add-elem {
         margin-right: 30px;
         margin-bottom: 30px;
     }
+
     .container-block {
         width: 1230px;
-      
+
     }
 }
-@media (max-width: 1330px){
-    header{
+
+@media (max-width: 1330px) {
+    header {
         height: 192px;
     }
-    .menu-items{
+
+    .menu-items {
         border-top: 6px solid #E9E9E9;
         margin: 0 auto;
     }
-    .head_contact h5{
+
+    .head_contact h5 {
         font-size: 17px;
     }
-    .head_contact p{
+
+    .head_contact p {
         padding-left: 16px;
     }
-  .logotip-svg{
-      width: 370px;
-  }
-  .header-top{
-    width: 100%;
-    padding-bottom: 20px;
-    border-bottom:none
+
+    .logotip-svg {
+        width: 370px;
+    }
+
+    .header-top {
+        width: 100%;
+        padding-bottom: 20px;
+        border-bottom: none
     }
 }
+
 @media (max-width: 1290px) {
-    .text-services{
-   text-align: center;
-   width: 97%;
+    .text-services {
+        text-align: center;
+        width: 97%;
     }
+
     .container-block {
         width: 99.7%;
-      
+
     }
-    .add-elem{
+
+    .add-elem {
         margin-right: 30px;
         margin-bottom: 0px;
     }
+
     .services-elem {
-   margin-bottom: 30px;
+        margin-bottom: 30px;
         width: 300px;
         height: auto;
         padding: 30px;
     }
 }
+
 @media (max-width: 1199px) {
-    header{
+    header {
         height: 245px;
     }
-.svg_network{
-margin-right: 10px;
-}
-    .logotip-svg{
-        width: 267.86px;
-        }
-        .head_online{
-        
-          margin-right: auto;
-        }     
-        .head_contact{
-        margin-left: 10px;
-        }
-        .block_network{
-            
-           margin-left: auto;
-      
-        }
-        .header-top{
-          padding-left: 40px;
-          margin: 0 auto;
-            }
-            .head_online{
-                margin-left: 0px;
-            }
+
+    .svg_network {
+        margin-right: 10px;
     }
+
+    .logotip-svg {
+        width: 267.86px;
+    }
+
+    .head_online {
+
+        margin-right: auto;
+    }
+
+    .head_contact {
+        margin-left: 10px;
+    }
+
+    .block_network {
+
+        margin-left: auto;
+
+    }
+
+    .header-top {
+        padding-left: 40px;
+        margin: 0 auto;
+    }
+
+    .head_online {
+        margin-left: 0px;
+    }
+}
+
 @media (max-width: 1123px) {
     .carousel-caption h3 {
 
@@ -580,145 +722,231 @@ margin-right: 10px;
 }
 
 @media (max-width: 959px) {
-    .header-top{
+    .header-top {
         padding-left: 20px;
         margin: 0 auto;
-          }
-    .add-elem{
+    }
+
+    .add-elem {
         margin-right: 0px;
         margin-bottom: 0px;
     }
+
     .services-elem {
-     
+
         margin-bottom: 20px;
         margin-right: 10px;
-     margin-left: 10px;
-      }
+        margin-left: 10px;
+    }
 }
-@media (max-width: 828px){
-    header{
+
+@media (max-width: 828px) {
+    header {
         height: auto;
     }
-    .ukr-lang{
+
+    .ukr-lang {
         text-align: center;
         margin: 0 auto;
         margin-top: 7px;
         padding-top: 3px;
         width: 92px;
         height: 23px;
-    
+
         border-top: none;
         background: #FFFFFF;
         box-shadow: none;
     }
 }
-@media (max-width: 810px){
- 
-    header{
+
+@media (max-width: 810px) {
+    .modal-content {
+        min-width: 300px;
+        height: 400px;
+        margin: 0 auto;
+        margin-left: 0px;
+    }
+
+    .modal-header {
+        border-bottom: none;
+        h5 {
+            width: 300px;
+            padding-top: 31px;
+            margin-left: 77px;
+            padding-bottom: 26px;
+            font-size: 30px;
+            line-height: 32px;
+        }
+    }
+    .modal-body {
+        padding-top: 0px;
+           button {
+            margin-top: 29px;
+        }
+
+    }
+
+    header {
         height: 260px;
     }
-    .svg_network{
-        margin-right:5px;
-        }
-    .logotip-svg{
+
+    .svg_network {
+        margin-right: 5px;
+    }
+
+    .logotip-svg {
         width: 240px;
     }
-    .head_contact h5{
+
+    .head_contact h5 {
         font-size: 14px;
     }
-    .head_contact p{
+
+    .head_contact p {
         font-size: 12px;
         padding-left: 0px;
     }
 }
-@media (max-width: 771px){
-    header{
+
+@media (max-width: 771px) {
+    header {
         height: 289px;
     }
 }
-@media (max-width: 766px){
-    header{
+
+@media (max-width: 766px) {
+    header {
         height: auto;
     }
-    header{
-  
-     box-shadow:none;
+
+    header {
+
+        box-shadow: none;
     }
+
     .burger {
         display: block;
     }
-    .menu-items{
+
+    .menu-items {
         display: none;
     }
-    .block_network{
+
+    .block_network {
         margin-left: 0px;
         width: 200px;
     }
 
 }
-@media (max-width: 640px){
-    .header-top{
+
+@media (max-width: 640px) {
+    .header-top {
         padding-right: 40px;
     }
 }
-@media (max-width: 575px){
-    .header{
+
+@media (max-width: 575px) {
+    .modal-content {
+        min-width: 280px;
+        max-width: 553px;
+        height: 400px;
+        margin: 0 auto;
+        margin-left: 0px;
+    }
+
+    .modal-header {
+        border-bottom: none;
+        h5 {
+            text-align: left;
+            width: 250px;
+            padding-top: 31px;
+            margin-left: 20px;
+            padding-bottom: 26px;
+            font-size: 30px;
+            line-height: 32px;
+        }
+    }
+    .modal-body {
+        padding-top: 0px;
+        input{
+            max-width: 300px;
+        }
+           button {
+            margin-top: 29px;
+        }
+
+    }
+    .header {
         padding-top: 10px;
     }
+
     .logotip-svg {
         width: 297px;
-   margin-left: 36px;
+        margin-left: 36px;
     }
-    .block_network{
+
+    .block_network {
         display: flex;
         margin-bottom: 10px;
     }
-.header div{
-    text-align: center;
-    justify-content: center;
+
+    .header div {
+        text-align: center;
+        justify-content: center;
+    }
+
+    .head_address p {
+        margin: 0 auto;
+
+    }
+
+    .head_contact h5 {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+
+    .head_address span:first-of-type {
+        margin-left: -10px;
+    }
+
+    .svg_network {
+        margin-right: 10px;
+    }
 }
-.head_address p{
-    margin: 0 auto;
-    
-}
-.head_contact h5{
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-.head_address span:first-of-type{
-margin-left: -10px;
-}
-.svg_network{
-    margin-right: 10px;
-}
-}
+
 @media (max-width: 553px) {
     .textbox {
         width: 330px;
     }
 }
+
 @media (max-width: 475px) {
     .logotip-svg {
         width: 265px;
-   margin-left:30px;
+        margin-left: 30px;
     }
+
     .carousel-control-next {
         right: 2px;
     }
+
     .carousel-caption {
         top: 50px;
         text-align: left;
     }
+
     .services-elem {
         width: 290px;
         margin-bottom: 20px;
         margin-right: 0px;
-     margin-left: 0px;
-      }
-    .text-services{
+        margin-left: 0px;
+    }
+
+    .text-services {
         text-align: center;
         width: 91%;
-         }
+    }
+
     .textbox {
         width: 250px;
     }
@@ -744,21 +972,34 @@ margin-left: -10px;
 
     }
 }
-@media (max-width: 397px){
+
+@media (max-width: 397px) {
     .logotip-svg {
         width: 265px;
- 
-  margin-left: 18px;
+
+        margin-left: 18px;
     }
 }
-@media (max-width: 375px){
-  
-.head_address p{
-        
-    width: 100%;
-}
-.header-top{
-    padding-right: 10px;
-    padding-left: 0px;
-}
+
+@media (max-width: 375px) {
+    .modal-body {
+        padding-top: 0px;
+        input{
+            max-width: 250px;
+            height: 50px;
+        }
+           button {
+            margin-top: 29px;
+        }
+
+    }
+    .head_address p {
+
+        width: 100%;
+    }
+
+    .header-top {
+        padding-right: 10px;
+        padding-left: 0px;
+    }
 }
