--- a/src/sass/main-page.scss
+++ b/src/sass/main-page.scss
@@ -28,8 +28,7 @@
     border-top: none;
 }
 .t825__animated-circle{
-left: 40px;
- bottom: 70px;
+    left: 40px;
     width: 60px;
     height: 60px;
     background:#0fa6da;
@@ -45,6 +44,7 @@ z-index: 99;
  
 .t825__btn{
     position: fixed;
+    bottom: 80px;
 }
 .t825__icon{
     padding: 13px;
@@ -64,7 +64,7 @@ z-index: 99;
     display: none;
     position: absolute;
   text-align: center;
-    bottom: 140px;
+    bottom: 10px;
     left: 40px;
     a{
         text-decoration: none;
@@ -76,7 +76,13 @@ z-index: 99;
     }
 }
  
-
+@media (max-width: 880px) {
+    .network-content{
+        background-color: white;
+        padding: 10px;
+        border-radius: 20px;
+    }
+}
 
 .modal-content {
     min-width: 640px;
