--- a/src/sass/main-page.scss
+++ b/src/sass/main-page.scss
@@ -82,6 +82,10 @@ z-index: 99;
         padding: 10px;
         border-radius: 20px;
     }
+    .t825__btn{
+        position: fixed;
+        bottom: 85px;
+    }
 }
 
 .modal-content {
