update icon in right

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -328,22 +328,19 @@
 .arrow-top {
   z-index: 99;
   cursor: pointer;
-  right: 80px;
+  right: 85px;
   bottom: 50px;
   position: absolute;
   display: none;
   border: 1px solid #0997ea;
   box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  padding: 30px;
+  padding: 15px;
   box-sizing: content-box;
   transition: 0.2s ease;
 }
 .arrow-top:hover {
   box-shadow: none;
-  padding: 20px;
-  right: 90px;
-  bottom: 60px;
 }
 
 .modal-footer {
@@ -351,7 +348,7 @@
 }
 
 .t825__animated-circle {
-  left: 40px;
+  display: none;
   width: 60px;
   height: 60px;
   background: #0fa6da;
@@ -365,8 +362,10 @@
 }
 
 .t825__btn {
+  z-index: 999;
   position: fixed;
-  bottom: 97px;
+  bottom: 197px;
+  right: 145px;
 }
 
 .t825__icon {
@@ -389,7 +388,7 @@
   position: absolute;
   text-align: center;
   bottom: 10px;
-  left: 40px;
+  left: 0px;
 }
 .network-content a {
   text-decoration: none;
@@ -404,11 +403,7 @@
     background-color: white;
     padding: 10px;
     border-radius: 20px;
-  }
-
-  .t825__btn {
-    position: fixed;
-    bottom: 85px;
+    margin-left: -14px;
   }
 }
 .modal-content {
@@ -948,19 +943,19 @@ header {
   }
 }
 @media (max-width: 1549px) {
+  .t825__btn {
+    right: 80px;
+    bottom: 170px;
+  }
+
   .arrow-top {
     background-color: white;
     right: 20px;
-    bottom: 30px;
+    bottom: 25px;
     border-radius: 50%;
-    padding: 30px;
+    padding: 15px;
     box-sizing: content-box;
     transition: 0.2s ease;
-  }
-  .arrow-top:hover {
-    padding: 20px;
-    right: 30px;
-    bottom: 40px;
   }
 
   .menu-items {
@@ -1076,18 +1071,18 @@ header {
   }
 }
 @media (max-width: 1123px) {
+  .t825__btn {
+    right: 76px;
+    bottom: 170px;
+  }
+
   .arrow-top {
-    right: 20px;
-    bottom: 30px;
+    right: 18px;
+    bottom: 25px;
     border-radius: 50%;
-    padding: 10px;
+    padding: 13px;
     box-sizing: content-box;
     transition: 0.2s ease;
-  }
-  .arrow-top:hover {
-    padding: 10px;
-    right: 20px;
-    bottom: 30px;
   }
 
   .carousel-caption h3 {
