--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2130,6 +2130,10 @@ td, th {
   }
 }
 @media (max-width: 897px) {
+  .price-txt-grn {
+    min-width: 120px;
+  }
+
   .price-do span {
     position: absolute;
     right: 20px;
@@ -2170,18 +2174,6 @@ td, th {
 @media (max-width: 500px) {
   .cont-block-price {
     padding-left: 20px;
-  }
-
-  td, th {
-    font-size: 14px;
-    line-height: 16px;
-    color: #202020;
-    text-align: right;
-  }
-
-  .price-do-after {
-    font-size: 12px;
-    line-height: 16px;
   }
 }
 .block-our_services a {
